BB-21484: Fix scrollbar in grid with cell links (#33117)

--- a/src/Oro/Bundle/DataGridBundle/Resources/public/css/scss/oro-datagrid/grid.scss
+++ b/src/Oro/Bundle/DataGridBundle/Resources/public/css/scss/oro-datagrid/grid.scss
@@ -40,6 +40,7 @@
         .cell-link-inner {
             width: 100%;
             opacity: 0;
+            overflow: hidden;
         }
 
         ~ * {
